# Papa

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  LICENSE  README.md  index.html  package-lock.json  package.json  readme.txt
examples/: gsap_example.html  swallow_animejs.html  swallow_gsap.html
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ContextMenu.tsx  PapaSpacePanel.tsx  RecordPanel.tsx  ReminderToast.tsx  SettingsPanel.tsx  index.ts
src/constants/: index.ts
src/hooks/: index.ts  useExportSettings.ts  useLlmSettings.ts  usePapaSpace.ts  useRecordPanel.ts  useReminder.ts
src/services/: api.ts
src/styles/: app.css
src/types/: index.ts
src/utils/: helpers.ts
