[package]
name = "papa_pet"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
chrono = "0.4"
device_query = "4.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
